<resources>
    <string name="app_name">Metric Convertor</string>
    <string name="hello_blank_fragment">blank fragment</string>
    <string name="length">Length</string>
    <string name="currency">Currency</string>
    <string name="temperature">Temperature</string>
    <string name="weight">Weight</string>
    <string name="convert">Convert</string>
    <string name="enter_value">Enter Value</string>
    <string name="equals">Equals to</string>
    <string name="km">kilometers</string>
    <string name="meters">meters</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="kilogram">kilogram</string>
    <string name="gram">gram</string>
    <string name="ounces">ounces</string>
    <string name="degree">degree</string>
    <string name="kelvin">kelvin</string>
    <string name="euro">euro</string>
    <string name="indian_rupee">inr</string>
    <string name="australian_dollar">aus</string>
    <string name="canadian_dollar">cad</string>
</resources>