<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/frameLayout5"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="10dp"
tools:context=".MetricConvertorFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please select Conversion"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="-5dp" />

    <RadioGroup
    android:id="@+id/radioGroupConvertor"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <RadioButton
        android:id="@+id/radioButtonCurrency"
        android:checked="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency" />

    <RadioButton
        android:id="@+id/radioButtonTemparature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature" />

    <RadioButton
        android:id="@+id/radioButtonLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/length" />

    <RadioButton
        android:id="@+id/radioButtonWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please Enter Currency in USD, Temperature in Fahrenheit, Length in miles, Weight in Pounds"
        android:textColor="#FB1212" />

</RadioGroup>

    <EditText
        android:id="@+id/editTextValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/enter_value"
        android:inputType="numberSigned|number|textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupConvertor"
        app:layout_constraintStart_toStartOf="@+id/radioGroupConvertor"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupConvertor" />

<Button
    android:id="@+id/btnConvert"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/convert"
    app:layout_constraintEnd_toEndOf="@+id/editTextValue"
    app:layout_constraintStart_toStartOf="@+id/editTextValue"
    app:layout_constraintTop_toBottomOf="@+id/editTextValue" />
</androidx.constraintlayout.widget.ConstraintLayout>